--- a/src/assets/scss/components/catalog-menu.scss
+++ b/src/assets/scss/components/catalog-menu.scss
@@ -1,7 +1,7 @@
 /*-------------- catalog-menu -----------------*/
 .catalog-menu{
 	width: 26%;
-	height: calc(100vh - 116px);
+	height: calc(100vh - 140px);
 	background: #fff;
 	box-shadow: 0px 12px 20px rgba(171, 171, 171, 0.25);
 	border-radius: 12px;
@@ -17,17 +17,17 @@
 		bottom: 0;
 		left: 0;
 		border-radius: 0 0 12px 12px;
+		user-select: none;
+		pointer-events: none;
 	}
 
 	&__content {
 		height: 100%;
-		padding: 32px 31px;
+		padding: 32px 32px 80px 32px;
 		overflow-y: auto;
 	}
 
-	&__item:not(:last-child){
-		margin-bottom: 32.5px;
-	}
+	&__item:not(:last-child){margin-bottom: 1rem;}
 
 	&__link{
 		display: inline-flex;
@@ -37,8 +37,7 @@
 	}
 
 	&__icon{
-		width: 20px;
-		margin-right: 12px;
+		width: 3rem;
 
 		.icon{
 			fill: #4a4a4a;
@@ -65,14 +64,6 @@
 	// &__item.inactive &__link{cursor: auto;}
 	// &__item.inactive &__link:hover &__text{color: #4a4a4a;}
 	// &__item.inactive &__link:hover &__icon .icon{fill: #4a4a4a;}
-}
-
-html[dir="rtl"]{
-	.catalog-menu{
-		&__icon{
-			margin-left: 12px;
-		}
-	}
 }
 
 @media (max-width: 1199px) {
@@ -109,10 +100,10 @@ html[dir="rtl"]{
 			padding: 16px 12px;
 		}
 
-		&__item.active,
-		&__item:hover{
-			background-color: $color-red;
-		}
+		// &__item.active,
+		// &__item:hover{
+		// 	background-color: $color-red;
+		// }
 
 		&__item.active &__text,
 		&__item:hover &__text{
@@ -128,10 +119,10 @@ html[dir="rtl"]{
 			width: 16px;
 		}
 
-		&__item.active &__icon .icon,
-		&__item:hover &__icon .icon{
-			fill: #fff;
-		}
+		// &__item.active &__icon .icon,
+		// &__item:hover &__icon .icon{
+		// 	fill: #fff;
+		// }
 	}
 
 	html[dir="rtl"]{
@@ -146,21 +137,52 @@ html[dir="rtl"]{
 
 @media (max-width: 767px) {
 	.catalog-menu{
-		width: calc(100% + 40px);
-		margin-left: -20px;
-		margin-right: -20px;
+		width: 100%;
 		border-radius: 0;
-		background: #fff;
+		background: transparent;
+		margin: 0;
 
 		&__content{
-			padding: 0 20px 20px;
+			padding: 10px 10px 5px;
 		}
 
 		&__link{
-			display: inline-flex;
+			display: flex;
+			flex-direction: column;
 			align-items: center;
 			text-decoration: none;
-			padding: 14px 12px;
+			padding: 0;
 		}
+
+		&__item{
+			box-shadow: none;
+			background: transparent;
+
+			img{transition: all .2s ease-in-out;}
+		}
+
+		&__item.active &__text,
+		&__item:hover &__text {
+			color: $color-red;
+		}
+
+		// &__item.active,
+		// &__item:hover {
+		// 	background-color: transparent;
+		// }
+
+		&__item.active img,
+		&__item:hover img {
+			transform: scale(1.4);
+			margin-top: -5px;
+		}
+
+		&__icon{
+			width: 70px;
+			height: 45px;
+			margin: 0;
+		}
+
+		&__text{font-size: 0.9rem;}
 	}
 }
