--- a/src/assets/scss/components/hamburger.scss
+++ b/src/assets/scss/components/hamburger.scss
@@ -39,7 +39,7 @@
 		display: block;
 		left: 0;
 		height: 1.7px;
-		background-color: #4a4a4a;
+		background-color: inherit;
 		border-radius: 2px;
 	}
 	
