--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -4,7 +4,7 @@ $path-icon: "../img/icons";
 $path-fonts: "../fonts";
 
 //Font
-$font-site: 'Product Sans', Arial, sans-serif;
+$font-site: 'Product Sans', 'Rubik', Arial, sans-serif;
 
 // Site
 $color-text: #3c3c3b;
@@ -15,3 +15,20 @@ $color-orange: #f28f16;
 $color-orange-dark: #e08516;
 $color-red: #d60b52;
 $color-red-dark: #b50b46;
+
+
+$brand-color-primary: #d92027!important;
+$brand-color-secondary: #b0976d!important;
+$brand-color-danger: #d92027!important;
+$brand-color-success: #3ad006!important;
+$brand-cards-radius: 12px;
+$brand-cards-bg: #e7d8a3 !important;
+$brand-inputs-radius: 20px;
+$brand-inputs-bg: #f6f6f6 !important;
+$brand-buttons-radius: 20px;
+$brand-buttons-bg: #b0976d !important;
+$brand-buttons-texts: #ffffff !important;
+$brand-color-titles: #d92027 !important;
+$brand-color-texts: #000000 !important;
+$brand-color-header: #d92027 !important;
+$brand-color-burger: #ffffff !important;
