--- a/src/assets/scss/components/catalog.scss
+++ b/src/assets/scss/components/catalog.scss
@@ -6,27 +6,33 @@
 
 	&__content{
 		width: calc(74% - 40px);
+		margin-top: -22px;
 	}
 
 	&__action{
 		display: flex;
 		justify-content: space-between;
+		align-items: flex-start;
 	}
 }
 
 .cat-filter{
-	display: flex;
-	flex-wrap: wrap;
 	position: relative;
 	margin-right: 16px;
 
+	&__content{
+		display: flex;
+		width: 100%;
+		overflow-x: auto;
+	}
+
 	&__item{
-		display: inline-block;
-		vertical-align: top;
-		height: 40px;
-		min-width: 68px;
+		// display: inline-block;
+		// vertical-align: top;
+		// height: 40px;
+		// min-width: 68px;
 		border-radius: 20px;
-		padding: 0 14px;
+		// padding: 0 14px;
 		background: #fff;
 		box-shadow: 0px 12px 20px rgba(171, 171, 171, 0.25);
 		margin: 0 16px 12px 0;
@@ -35,7 +41,19 @@
 		text-decoration: none;
 		text-align: center;
 		transition: all 0.3s ease 0s;
+		position: relative;
 		cursor: pointer;
+	}
+
+	&__link{
+		display: inline-flex;
+		justify-content: space-between;
+		align-items: center;
+		text-decoration: none;
+		min-width: 68px;
+		width: 100%;
+		height: 100%;
+		padding: 0 14px;
 	}
 
 	&__icon,
@@ -45,13 +63,22 @@
 	}
 
 	&__icon{
+		width: 20px;
 		margin-right: 8px;
 		margin-top: -2px;
+    .icon {
+      max-width: 15px;
+      fill: white;
+    }
 	}
 
 	&__text{
-		@include font(normal, normal, 1rem, 40px, $color-grey);
+		width: 100%;
+		@include font(normal, normal, 1rem, 40px, #4a4a4a);
+		text-align: center;
 	}
+
+	&__icon + &__text{width: calc(100% - 28px);}
 
 	&__more-icon{
 		display: inline-flex;
@@ -84,14 +111,27 @@
 	&__more-icon:hover{background: $color-orange;}
 	&__more-icon:hover .icon{fill: #fff;}
 
-	&__item:hover,
+	&__item:hover{
+    box-shadow: inset 0 0 0 1px $color-orange;
+  }
 	&__item.active{
 		background: $color-orange;
 	}
 
-	&__item:hover &__text,
+	&__item:hover &__text{
+    color: $color-orange;
+  }
 	&__item.active &__text{
-		color: #fff;
+	  color: #fff;
+	}
+
+	&__close{
+		display: none;
+		position: absolute;
+		@include top-center;
+		right: 13px;
+
+		.icon{fill: #fff;}
 	}
 
 	&__sub{
@@ -120,6 +160,7 @@
 .view{
 	display: inline-flex;
 	border-radius: 12px;
+	overflow: hidden;
 
 	&__item{
 		display: inline-flex;
@@ -146,16 +187,6 @@
 
 	&__item.active{cursor: auto;}
 
-	&__item:first-child{
-		border-top-left-radius: 12px;
-		border-bottom-left-radius: 12px;
-	}
-
-	&__item:last-child{
-		border-top-right-radius: 12px;
-		border-bottom-right-radius: 12px;
-	}
-
 	&__item:hover,
 	&__item.active{
 		background: $color-orange;
@@ -167,7 +198,7 @@
 	box-shadow: 0px 12px 24px rgba(213, 213, 213, 0.25);
 	border-radius: 12px;
 	padding: 19px 32px;
-	margin: 10px 0 24px;
+	margin: 0 0 24px;
 	position: relative;
 
 	&__head{
@@ -204,52 +235,97 @@
 }
 
 .cat-category-wrap{
-	margin-bottom: -22px;
+	// margin-bottom: -22px;
 	position: relative;
 
-	&::after{
-		content: '';
-		display: inline-block;
-		width: 100%;
-		height: 120px;
-		background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
-		position: absolute;
-		bottom: 0;
-		left: 0;
-	}
+	// &::after{
+	// 	content: '';
+	// 	display: inline-block;
+	// 	width: 100%;
+	// 	height: 120px;
+	// 	background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+	// 	position: absolute;
+	// 	bottom: 0;
+	// 	left: 0;
+	// }
 
 	&.end::after{display: none;}
 
 	&__content{
-		max-height: calc(100vh - 146px);
+    max-height: calc(100vh - 98px);
 		overflow-y: auto;
-		margin-left: -30px;
-		padding-left: 30px;
 		padding-bottom: 70px;
 		overflow-x: hidden;
 	}
 }
 
-
 .cat-category{
-	width: calc(100% - 24px);
+	// width: calc(100% - 24px);
+	width: 100%;
 	background: #fff;
-	box-shadow: 0px 12px 20px rgba(171, 171, 171, 0.25);
+	box-shadow: 0 12px 20px rgba(171, 171, 171, 0.25);
 	border-radius: 12px;
 	padding: 21px 32px;
-	margin-bottom: 20px;
+	margin-bottom: 22px;
+}
+
+.working-time{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	min-height: 40px;
+	background: #e0f9dc;
+	border-radius: 12px;
+	padding: 8px 15px 3px;
+	position: relative;
+
+	&__img{
+		margin-right: 12px;
+		position: relative;
+	}
+
+	&__info{
+		display: flex;
+		align-items: center;
+		position: relative;
+	}
+
+	&__label{
+		@include font(normal, 500, 1rem, 1.2, $color-text);
+	}
+
+	&__bg{
+		width: 100%;
+		height: 32px;
+		position: absolute;
+		right: 0;
+		bottom: 0;
+	}
+
+	&_red{background-color: #ffedf4;}
+}
+
+.cat-category-action{
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	margin-bottom: 10px;
+	.working-time{
+		width: calc(100% - 104px);
+	}
 }
 
 .cat-category-desc{
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 	margin-bottom: 22px;
 
-	&__icon{margin-top: 5px;}
-
 	&__icon{
-		width: 40px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 4rem;
 
 		.icon{
 			fill: $color-red;
@@ -274,29 +350,32 @@
 .catalog-list{
 	display: flex;
 	flex-wrap: wrap;
-	width: calc(100% + 76px);
-	margin-left: -10px;
-	margin-right: -10px;
+	// width: calc(100% + 76px);
+	width: 100%;
+	margin: 0;
 
 	&__item{
 		display: flex;
 		justify-content: space-between;
 		width: 100%;
-		min-height: 120px;
+		min-height: 150px;
 		background: #fff;
 		box-shadow: 0px 24px 48px rgba(165, 165, 165, 0.25);
 		border-radius: 12px;
-		margin: 0 10px 16px;
+		margin: 10px;
+		overflow: hidden;
 	}
 
 	&__img{
 		display: block;
-		width: 120px;
+		width: 200px;
+		max-width: 100%;
+		min-width: 120px;
 		background-repeat: no-repeat;
 		background-position: center;
 		background-size: cover;
 		position: relative;
-		border-radius: 12px 0 0 12px;
+		// border-radius: 12px 0 0 12px;
 	}
 
 	&__new{
@@ -310,6 +389,9 @@
 	}
 
 	&__content{
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
 		width: calc(100% - 120px);
 		padding: 18px 18px 12px 20px;
 	}
@@ -324,8 +406,13 @@
 	&__name a:hover{color: $color-orange;}
 
 	&__text{
-		@include font(normal, normal, 1rem, 1.2, $color-grey);
+		@include font(normal, normal, 1rem, 1.2, #4a4a4a);
 		margin-top: 10px;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		display: -webkit-box;
+		-webkit-line-clamp: 2;
+		-webkit-box-orient: vertical;
 	}
 
 	&__info{
@@ -362,6 +449,7 @@
 	&__btn{
 		display: inline-flex;
 		align-items: center;
+		place-self: flex-end;
 		min-width: 80px;
 		height: 32px;
 		border-radius: 16px;
@@ -400,15 +488,15 @@
 
 	&_tile &__img{
 		width: 100%;
-		height: 88px;
-		border-radius: 12px 12px 0 0;
+		height: 150px;
+		// border-radius: 12px 12px 0 0;
 	}
 
 	&_tile &__content{
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		height: calc(100% - 88px);
+		height: calc(100% - 150px);
 		width: 100%;
 		padding: 8px 12px;
 	}
@@ -420,6 +508,54 @@
 	&_tile &__price-old{margin-top: 5px;}
 	&_tile &__text{font-size: 0.875rem; margin-top: 8px;}
 	&_tile &__bottom{margin-top: 10px;}
+}
+
+.catalog-list__desc {
+  width: 100%;
+}
+
+.item-modal-trigger {
+	cursor: pointer;
+}
+
+.ribbon {
+	text-transform: uppercase;
+	color: white;
+}
+
+.ribbon3 {
+	font-size: 0.5rem;
+	height: 34px;
+	line-height: 34px;
+	padding: 0 10px 0 15px;
+	position: absolute;
+	left: -4px;
+	top: 15px;
+	background: $color-red;
+
+	&:before,
+	&:after {
+		content: "";
+		position: absolute;
+	}
+
+	&:before {
+		height: 0;
+		width: 0;
+		top: -8.5px;
+		left: 0.1px;
+		border-bottom: 9px solid black;
+		border-left: 9px solid transparent;
+	}
+
+	&:after {
+		height: 0;
+		width: 0;
+		right: -14px;
+		border-top: 17px solid transparent;
+		border-bottom: 17px solid transparent;
+		border-left: 14px solid $color-red;
+	}
 }
 
 .catalog-list-icon{
@@ -435,7 +571,7 @@
 		height: 24px;
 		border-radius: 50%;
 		background: #f3f3f3;
-		margin-right: 12px;
+		margin-right: 7px;
 	}
 
 	&__item img{
@@ -444,6 +580,31 @@
 
 	&__item_no-bg{background: transparent;}
 	&__item_no-bg img{width: 24px;}
+}
+
+
+.data-delivery{
+	display: flex;
+	flex-wrap: wrap;
+	// justify-content: center;
+	background: #f5f5f5;
+	border-radius: 12px;
+	padding: 15px 5px;
+	margin-top: 20px;
+
+	&__item{padding: 0 15px;}
+
+	&__item:not(:last-child){border-right: 1px solid #e9e9e9;}
+
+	&__title{
+		@include font(normal, 500, 1rem, 1.2, #9b9b9b);
+		text-transform: uppercase;
+		margin-bottom: 15px;
+	}
+
+	&__val{
+		@include font(normal, normal, 1.5rem, 1.2, $color-red);
+	}
 }
 
 html[dir="rtl"]{
@@ -464,19 +625,10 @@ html[dir="rtl"]{
 		&__sub{
 			border-radius: 0 12px 12px 12px;
 		}
-	}
 
-	.view{
-		&__item:first-child{
-			border-radius: 0;
-			border-top-right-radius: 12px;
-			border-bottom-right-radius: 12px;
-		}
-	
-		&__item:last-child{
-			border-radius: 0;
-			border-top-left-radius: 12px;
-			border-bottom-left-radius: 12px;
+		&__close{
+			right: auto;
+			left: 13px;
 		}
 	}
 
@@ -504,13 +656,35 @@ html[dir="rtl"]{
 			left: auto;
 			right: 9px;
 		}
+
+		// &__img{border-radius: 0 12px 12px 0;}
 	}
+
+	// .catalog-list_tile .catalog-list__img{
+	// 	border-radius: 12px 12px 0 0;
+	// }
 
 	.catalog-list-icon{
 		&__item{
 			margin-right: 0;
+			margin-left: 7px;
+		}
+	}
+
+	.data-delivery{
+		&__item:not(:last-child){
+			border-right: 0;
+			border-left: 1px solid #e9e9e9;
+		}
+	}
+
+	.working-time{
+		&__img{
+			margin-right: 0;
 			margin-left: 12px;
 		}
+
+		&__bg{transform: scale(-1,1);}
 	}
 }
 
@@ -570,14 +744,16 @@ html[dir="rtl"]{
 }
 
 .dot-menu{
-	display: inline-block;
-	width: 4px;
+	display: flex;
+	justify-content: center;
+	width: 20px;
 	height: 20px;
 	position: relative;
+	cursor: pointer;
 
 	&__icon{
 		display: inline-block;
-		width: 100%;
+		width: unset;
 		height: 100%;
 		position: relative;
 	}
@@ -608,15 +784,15 @@ html[dir="rtl"]{
 	&__icon span::after{bottom: -8px;}
 
 	&__list{
-		// display: none;
 		min-width: 138px;
 		background: #fcfcfc;
-		border-radius: 12px 0px 12px 12px;
+		border-radius: 12px 0 12px 12px;
 		padding: 6px 24px;
 		margin-top: 4px;
+		box-shadow: 0 8px 16px hsla(0,0%,54.1%,.25);
 		position: absolute;
 		top: 100%;
-		right: 0;
+		right: 10px;
 		z-index: 3;
 	}
 
@@ -649,7 +825,7 @@ html[dir="rtl"]{
 	padding: 18px 26px 16px 24px;
 	background: $color-red;
 	color: #fff;
-	border-radius: 12px 0px 0px 12px;
+	border-radius: 12px 0 0 12px;
 	margin-bottom: 33px;
 
 	&__content{
@@ -667,7 +843,6 @@ html[dir="rtl"]{
 
 	&__time{
 		@include font(normal, normal, 0.75rem, 1.2, #fff);
-		padding-left: 25px;
 		margin-top: 6px;
 		position: relative;
 
@@ -728,6 +903,7 @@ html[dir="rtl"]{
 	&__bottom{
 		margin-top: 36px;
 		text-align: center;
+		padding-bottom: 20px;
 	}
 
 	&__copyright{
@@ -737,6 +913,7 @@ html[dir="rtl"]{
 
 		img{
 			margin-left: 2px;
+			margin-top: -3px;
 		}
 	}
 }
@@ -747,7 +924,12 @@ html[dir="rtl"]{
 	align-items: center;
 	height: 360px;
 	padding: 10px;
-	@include font(normal, 500, 0.75rem, 1.2, #696969);
+	@include font(normal, 500, 1.5rem, 1.2, #b4b4b4);
+}
+
+.mobile-cart .close-button {
+	position: fixed;
+	top: 78px;
 }
 
 .cat-order-list{
@@ -795,17 +977,41 @@ html[dir="rtl"]{
 	&__name a:hover{color: $color-orange;}
 
 	&__price{
-		@include font(normal, normal, 0.875rem, 1.2, #a4a4a4);
+		@include font(normal, normal, 0.875rem, 1.2, #4a4a4a);
 		margin-top: 8px;
 	}
 
-	&__action{
+  &__price-tile{
+    margin-top: 8px;
+  }
+
+  &__price-def{
+    @include font(normal, normal, 0.875rem, 1.2, #4a4a4a);
+    white-space: nowrap;
+  }
+  &__price-old{
+    @include font(normal, normal, 0.75rem, 1.2, #d3d3d3);
+    text-decoration: line-through;
+    margin-top: 2px;
+    white-space: nowrap;
+  }
+
+
+  &__action{
 		display: flex;
+    justify-content: center;
 		align-items: center;
 		flex-wrap: wrap;
-		width: 90px;
+		// width: 90px;
+		width: unset;
+ 		min-width: 100px;
 		margin-left: -3px;
 		margin-right: -3px;
+
+		.counter__min,
+		.counter__max{
+			margin: 3px;
+		}
 	}
 
 	&__edit,
@@ -834,10 +1040,12 @@ html[dir="rtl"]{
 	&__edit:hover{background-color: #ffe4c3;}
 	&__del:hover{background-color: #fbc5d6;}
 	&__add:hover{background-color: #ccefc6;}
+
+	&__edit{margin: 0 6px;}
 }
 
 .cat-coupon{
-	margin-bottom: 44px;
+	margin-bottom: 30px;
 
 	&__title{
 		@include font(normal, 500, 1rem, 1.2, $color-red);
@@ -864,6 +1072,13 @@ html[dir="rtl"]{
 	input[type="text"]:focus{box-shadow: none; border-color: $color-orange;}
 	input[type="text"]::placeholder{color: #9B9B9B;}
 
+  &__loader {
+    position: absolute;
+    @include top-center;
+    right: 24px;
+    margin: 10px;
+  }
+
 	&__btn{
 		@include font(normal, 500, 0.875rem, 1, #48B26B);
 		text-decoration: none;
@@ -879,7 +1094,7 @@ html[dir="rtl"]{
 		width: 100%;
 		border-radius: 1.5rem;
 		background: #e0f9dc;
-		@include font(normal, normal, 0.875rem, 1.2, #48b26b);
+		@include font(normal, 500, 0.875rem, 1.2, #48b26b);
 		padding: 16px 50px 15px 20px;
 		transition: all 0.3s ease 0s;
 		position: relative;
@@ -922,6 +1137,34 @@ html[dir="rtl"]{
 	}
 }
 
+.zones-table {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0 0 3em 0;
+	padding: 0;
+}
+
+.zones-table-cell {
+	box-sizing: border-box;
+	flex-grow: 1;
+	width: 100%;
+	padding: 0.8em 1.2em;
+	overflow: hidden;
+	list-style: none;
+	border-bottom: 1px solid #e1e1e1;
+}
+
+.header-cell {
+	font-weight: bold;
+	color: $color-red;
+}
+
+.zones-table-2cols > .zones-table-cell  { width: 50%; }
+.zones-table-3cols > .zones-table-cell  { width: 33.33%; }
+.zones-table-4cols > .zones-table-cell  { width: 25%; }
+.zones-table-5cols > .zones-table-cell  { width: 20%; }
+.zones-table-6cols > .zones-table-cell  { width: 16.6%; }
+
 html[dir="rtl"]{
 	.cat-order-user{
 		.dot-menu{
@@ -932,21 +1175,16 @@ html[dir="rtl"]{
 
 	.dot-menu{
 		&__list{
-			right: auto;
-			left: 0;
-			border-radius: 0px 12px 12px 12px;
+      right: auto;
+      left: 10px;
+      border-radius: 0 12px 12px 12px;
 		}
 	}
 
 	.cat-address{
 		margin-left: 0;
 		margin-right: -50px;
-		border-radius: 0px 12px 12px 0px;
-
-		&__time{
-			padding-left: 0;
-			padding-right: 25px;
-		}
+		border-radius: 0 12px 12px 0;
 
 		&__time .icon{
 			left: auto;
@@ -972,6 +1210,11 @@ html[dir="rtl"]{
 	}
 
 	.cat-coupon{
+		&__loader{
+			right: auto;
+			left: 24px;
+		}
+
 		&__btn{
 			right: auto;
 			left: 24px;
@@ -1059,6 +1302,8 @@ html[dir="rtl"]{
 		&__price-def{font-size: 1rem;}
 		&_tile &__name, &_tile &__name a, &_tile &__price-def{font-size: 0.875rem;}
 	}
+
+	.search-form-order{width: 200px;}
 }
 
 @media (max-width: 767px) {
@@ -1075,7 +1320,13 @@ html[dir="rtl"]{
 	}
 
 	.cat-filter{
+		margin-left: 0;
 		margin-right: 0;
+
+		&__content{
+			flex-wrap: wrap;
+			overflow-x: visible;
+		}
 
 		&__item{
 			min-width: 48px;
@@ -1092,14 +1343,23 @@ html[dir="rtl"]{
 	}
 
 	.catalog-list{
-		width: calc(100% + 14px);
-		margin-left: -7px;
-		margin-right: -7px;
+		width: 100%;
+		margin-left: 0;
+		margin-right: 0;
 
-		&__item{min-height: 88px; margin-bottom: 12px;}
-		&__img{width: 88px;}
+		&__item{
+			min-height: 106px;
+			margin-top: 0;
+			margin-bottom: 12px;
+		}
+
+		&__img{
+			width: 120px;
+			min-width: 120px;
+		}
+
 		&__content{
-			width: calc(100% - 88px);
+			width: calc(100% - 120px);
 			padding: 8px 12px;
 		}
 
@@ -1111,11 +1371,15 @@ html[dir="rtl"]{
 			margin: 0 7px 14px;
 		}
 
-		&_tile &__img{height: 72px;}
+		&_tile &__img{
+			height: 88px;
+			width: auto;
+		}
+
 		&__price-tile{margin-top: 0;}
-		
+
 		&_tile &__content{
-			height: calc(100% - 72px);
+			height: calc(100% - 88px);
 			padding: 12px;
 		}
 
@@ -1131,13 +1395,22 @@ html[dir="rtl"]{
 		}
 	}
 
+	.catalog-list-icon{
+		&__item {
+			width: 20px;
+			height: 20px;
+			margin-right: 12px;
+		}
+	}
+
 	.catalog-magnit-btn{
 		position: fixed;
-		bottom: 45px;
+		bottom: 15px;
 		left: 0;
 		right: 0;
 		margin: 0 auto;
 		padding: 0 20px;
+		box-shadow: 0 8px 16px rgba(138, 138, 138, 0.25);
 	}
 
 	.catalog-magnit-btn .btn{
@@ -1163,6 +1436,9 @@ html[dir="rtl"]{
 		&__item{display: flex;}
 		&__info{width: calc(100% - 64px);}
 		&__price{font-size: 0.75rem;}
+		&__price-tile{font-size: 0.75rem;}
+		&__price-def{font-size: 0.75rem;}
+		&__price-old{font-size: 0.5rem;}
 
 		&__img{
 			width: 48px;
@@ -1186,7 +1462,73 @@ html[dir="rtl"]{
 			max-width: 335px;
 			width: 100%;
 		}
-		
+
+		&__bottom{
+			position: sticky;
+			bottom: 80px;
+		}
+	}
+
+	.cat-coupon{margin-top: 2rem;}
+
+	.cat-notice{
+		margin: 10px;
+	}
+
+	.cat-category-wrap{
+		&__content {
+			max-height: 100vh;
+			padding: 210px 10px 100px 10px;
+		}
+	}
+
+	.cat-category {
+		padding: 1px 5px;
+	}
+
+	.cat-category-desc{
+		margin-top: 1.2rem;
+
+		&__content {
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+			width: 100%;
+		}
+
+		&__icon {
+			width: 70px;
+			margin: 0;
+		}
+	}
+
+	.data-delivery{
+		display: block;
+		background: transparent;
+    padding: 20px;
+
+		&__item{
+			display: flex;
+			justify-content: space-between;
+			padding: 7px 0;
+		}
+
+		&__item:not(:last-child){
+			border: 0;
+			border-bottom: 1px solid #e9e9e9;
+		}
+
+		&__title{
+			margin-bottom: 0;
+			margin-right: 15px;
+		}
+	}
+
+	.working-time{
+		margin-top: 5px;
+		margin-bottom: 10px;
+		padding-top: 8px;
+		padding-bottom: 8px;
 	}
 
 	html[dir="rtl"]{
@@ -1201,6 +1543,31 @@ html[dir="rtl"]{
 
 		.cat-address{
 			margin-right: 0;
+		}
+
+		// .catalog-list{
+		// 	&:not(.catalog-list_tile) &__img {
+		// 		border-radius: 12px 0 0 12px;
+		// 	}
+		// }
+
+		.catalog-list-icon{
+			&__item {
+				margin-right: 0;
+				margin-left: 12px;
+			}
+		}
+
+		.data-delivery{
+			&__title{
+				margin-right: 0;
+				margin-left: 15px;
+			}
+
+			&__item:not(:last-child){
+				border: 0;
+				border-bottom: 1px solid #e9e9e9;
+			}
 		}
 	}
 }
