--- a/src/assets/scss/components/new-order.scss
+++ b/src/assets/scss/components/new-order.scss
@@ -3,9 +3,365 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-start;
-	
+
 	&__main{
 		width: calc(74% - 56px);
+	}
+}
+
+.order-header{
+	@include font(normal, normal, 1rem, 1.2, #eee);
+	background: linear-gradient(72.37deg, #F28F16 6.41%, #D60B52 95.11%);
+	box-shadow: 0px 8px 16px rgba(207, 207, 207, 0.25);
+	position: relative;
+	z-index: 10;
+
+	&__content{
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		height: 76px;
+		padding: 10px 0;
+		position: relative;
+	}
+
+	&__info{
+		display: flex;
+		align-items: center;
+	}
+
+	&__logo{
+    width: 200px;
+    padding: 1rem 0;
+    img {
+      transition: opacity 0.3s linear;
+    }
+  }
+
+	&__time{
+		.dropdown{
+			display: inline-flex;
+			align-items: center;
+
+			&__icon .icon,
+			&__arr .icon{
+				fill: #fff;
+			}
+
+			&__head{color: #eee;}
+		}
+	}
+
+	.desktop-toolbar-icon{margin-right: 12px;}
+
+	&__delevery{
+		padding: 0 20px;
+		position: relative;
+
+		.icon{fill: #fff;}
+	}
+
+	&__delevery-title{
+		display: inline-flex;
+		align-items: center;
+		@include font(normal, normal, 1rem, 1.2, #eee);
+	}
+
+	&__phone{
+		display: inline-flex;
+		align-items: center;
+		padding: 0 20px;
+		position: relative;
+
+		.icon{fill: #fff;}
+	}
+
+	&__phone-number{
+		@include font(normal, normal, 1rem, 1.2, #eee);
+    direction: ltr;
+	}
+
+	&__phone::after,
+	&__delevery::after{
+		content: '';
+		display: inline-block;
+		width: 1px;
+		height: 26px;
+		background: #fff;
+		position: absolute;
+		left: 0;
+		@include top-center;
+	}
+
+	.cat-filter{
+		max-width: calc(100% - 270px);
+		margin: 0;
+
+		&__item{margin: 6px;}
+
+		&__item.active .cat-filter__close{display: inline-block;}
+		&__item_fix-indent.active .cat-filter__link{padding-left: 14px; padding-right: 14px;}
+	}
+}
+
+.header-search{
+	margin-left: 7px;
+	// position: relative;
+
+	&__btn{
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+		width: 44px;
+		height: 44px;
+		border-radius: 50%;
+		background: #fff;
+		transition: all 0.3s ease 0s;
+		cursor: pointer;
+		position: relative;
+
+		.icon{stroke: $color-red;}
+	}
+
+	&__btn:hover{background: rgba(255,255,255,0.8);}
+
+	&__count{
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+		width: 18px;
+		height: 18px;
+		border-radius: 50%;
+		background: $color-orange;
+		@include font(normal, normal, 0.875rem, 1.2, #fff);
+		position: absolute;
+		top: -3px;
+		right: -3px;
+    transition: opacity 0.3s linear;
+	}
+
+	&__content{
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		height: 56px;
+		width: 0;
+		background: #fff;
+		border-radius: 28px;
+		padding: 2px 0 2px 0;
+		position: absolute;
+		right: 0;
+		@include top-center;
+		transition: all 0.4s ease 0s;
+		overflow: hidden;
+	}
+
+	&__content.active{
+		padding: 2px 68px 2px 20px;
+		width: 100%;
+	}
+
+	&__close{
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+		width: 40px;
+		height: 40px;
+		border-radius: 50%;
+		background: $color-red;
+		box-shadow: 0px 12px 16px rgba(214, 11, 82, 0.25);
+		cursor: pointer;
+		position: absolute;
+		@include top-center;
+		right: 8px;
+
+		.icon{fill: #fff;}
+	}
+}
+
+.order-header-icons{
+	display: inline-flex;
+	align-items: center;
+
+	&__item{
+		margin: 0 8px;
+		position: relative;
+	}
+
+	&__popup-wrap{
+		display: none;
+		position: absolute;
+		top: 100%;
+		left: 50%;
+		transform: translateX(-50%);
+		padding-top: 11px;
+	}
+
+	&__popup{
+		display: flex;
+		align-items: center;
+		background: #fff;
+		border-radius: 12px;
+		padding: 6px;
+		box-shadow: 0px 6px 12px rgba(114, 114, 114, 0.25);
+		position: relative;
+	}
+
+	&__popup::after{
+		content: '';
+		display: inline-block;
+		width: 0;
+		height: 0;
+		border-style: solid;
+		border-width: 0 8px 8px 8px;
+		border-color: transparent transparent #ffffff transparent;
+		position: absolute;
+		bottom: 100%;
+		left: 0;
+		right: 0;
+		margin: 0 auto;
+	}
+
+	&__ic{
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+		width: 32px;
+		height: 32px;
+		border-radius: 50%;
+		background: #f5f5f5;
+		margin: 2px;
+
+		.icon{fill: $color-grey;}
+	}
+
+	&__ic.active{background: #16A3F2;}
+	&__ic.active .icon{fill: #fff;}
+
+	&__item:hover &__popup-wrap{display: block;}
+}
+
+.notice-filter-wrap{
+	position: relative;
+	z-index: 10;
+}
+
+.notice-filter{
+	display: flex;
+	align-items: center;
+	width: 100%;
+	min-height: 32px;
+	padding: 4px 35px 4px 4px;
+	background: #f6dbe4;
+	border-radius: 16px;
+	position: absolute;
+	top: 22px;
+	left: 0;
+
+	&__edit{
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+		width: 24px;
+		height: 24px;
+		border-radius: 50%;
+		background: #fcecd8;
+		margin-right: 12px;
+		transition: all 0.2s ease 0s;
+    cursor: pointer;
+		.icon{fill: $color-orange;}
+	}
+
+	&__text{
+		@include font(normal, normal, 1rem, 1.2, $color-red);
+	}
+
+	&__close{
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+		width: 24px;
+		height: 24px;
+		border-radius: 50%;
+		background: #fff;
+		transition: all 0.2s ease 0s;
+		position: absolute;
+		top: 4px;
+		right: 4px;
+		cursor: pointer;
+
+		.icon{fill: $color-red;}
+	}
+
+	&__close:hover{background: rgba(255,255,255,0.7);}
+}
+
+html[dir="rtl"]{
+	.order-header{
+		background: linear-gradient(72.37deg, #D60B52 6.41%, #F28F16 95.11%);
+
+		.desktop-toolbar-icon{
+			margin-right: 0;
+			margin-left: 12px;
+		}
+
+		&__phone::after,
+		&__delevery::after{
+			left: auto;
+			right: 0;
+		}
+
+		.cat-filter{
+			margin: 0;
+
+			&__item{margin: 6px;}
+
+			&__item.active .cat-filter__link{
+				padding-right: 14px;
+			}
+
+			&__item_fix-indent.active .cat-filter__link{padding-left: 14px; padding-right: 14px;}
+		}
+	}
+
+	.header-search{
+		margin-left: 0;
+		margin-right: 7px;
+
+		&__count{
+			right: auto;
+			left: -3px;
+		}
+
+		&__content{
+			right: auto;
+			left: 0;
+		}
+
+		&__content.active{
+			padding-right: 20px;
+			padding-left: 68px;
+		}
+
+		&__close{
+			right: auto;
+			left: 8px;
+		}
+	}
+
+	.notice-filter{
+		padding-left: 35px;
+		padding-right: 4px;
+
+		&__edit{
+			margin-right: 0;
+			margin-left: 12px;
+		}
+
+		&__close{
+			right: auto;
+			left: 4px;
+		}
 	}
 }
 
@@ -15,20 +371,31 @@
 	}
 }
 
+@media (max-width: 991px) {
+	.order-header{
+		.cat-filter{max-width: calc(100% - 220px);}
+	}
+}
+
 @media (max-width: 767px) {
+	.order-header{
+		display: none;
+	}
+
 	.new-order{
 		display: block;
-		padding: 0 20px;
+		padding: 0;
 		margin: 0;
 	}
 
 	.new-order-top{
 		display: flex;
+		flex-direction: column;
 		justify-content: space-between;
 		align-items: center;
-		margin-left: -20px;
-		margin-right: -20px;
-		padding: 22px 20px;
+		margin-left: 0;
+		margin-right: 0;
+		padding: 10px 0;
 		background: #fff;
 		position: relative;
 
@@ -42,20 +409,21 @@
 		.view{
 			box-shadow: 0px 12px 20px rgba(171, 171, 171, 0.25);
 			border-radius: 12px;
+			margin-left: 20px;
 		}
 	}
 
 	.page-mob-profile{
 		width: calc(100% - 42px);
 		position: relative;
-		
+
 		&__content{
 			display: flex;
 			align-items: center;
 			position: relative;
 			padding: 2px 10px;
 		}
-	
+
 		&__photo{
 			display: inline-block;
 			width: 40px;
@@ -68,7 +436,7 @@
 			position: relative;
 			z-index: 2;
 		}
-	
+
 		&__photo-icon{
 			display: inline-flex;
 			align-items: center;
@@ -81,16 +449,16 @@
 			bottom: -5px;
 			right: -5px;
 		}
-	
+
 		&__info{
 			width: calc(100% - 53px);
 		}
-	
+
 		&__head{
 			@include font(normal, 500, 1rem, 1.2, #4a4a4a);
 			letter-spacing: 0.02em;
 		}
-	
+
 		&__text{
 			@include font(normal, normal, 0.625rem, 1.2, #a4a4a4);
 		}
@@ -117,7 +485,7 @@
 				right: 0;
 				margin: 0 auto;
 			}
-			
+
 			&__list{
 				display: none;
 				padding: 0 12px;
@@ -125,7 +493,7 @@
 		}
 
 		&.active{
-			background: #fcfcfc;
+			background: #fff;
 			border-radius: 0px 12px 0 0;
 		}
 
@@ -154,6 +522,13 @@
 			&__photo{
 				margin-right: 0;
 				margin-left: 12px;
+			}
+		}
+
+		.new-order-top{
+			.view{
+				margin-left: 0;
+				margin-right: 20px;
 			}
 		}
 	}
