--- a/src/assets/scss/components/notice.scss
+++ b/src/assets/scss/components/notice.scss
@@ -29,12 +29,13 @@
 
 .notice{
 	display: inline-block;
-	width: 332px;
-	max-width: 100%;
+	width: 100%;
+	max-width: 400px;
 	background: #E0F9DC;
 	border-radius: 12px;
-	@include font(normal, 500, 1rem, 1.2, $color-green);
-	padding: 15px 65px 14px 16px;
+	@include font(normal, 500, 1rem, 1.2, #fff);
+	padding: 15px;
+	margin-bottom: 5px;
 	box-shadow: 0px 12px 20px rgba(65, 65, 65, 0.25);
 	position: relative;
 	opacity: 0.95;
@@ -63,7 +64,7 @@
 	&_red{
 		background: #F6DBE4;
 		box-shadow: 0px 12px 20px rgba(65, 65, 65, 0.25);
-		color: $color-red;
+		color: #fff;
 	}
 
 	&_red &__close .icon{fill: $color-red;}
@@ -146,4 +147,21 @@ body .ui-toast .ui-toast-message.ui-toast-message-error .ui-toast-close-icon::be
 
 .ui-toast .ui-toast-close-icon{
 	@include top-center;
+}
+
+#toast-container {
+	padding: 20px;
+	width: 400px;
+	max-width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+@media (max-width: 767px) {
+	#toast-container {
+	  align-items: center;
+	  left: 0;
+	  right: 0;
+	}
 }
