--- a/src/assets/scss/components/offer.scss
+++ b/src/assets/scss/components/offer.scss
@@ -1,12 +1,10 @@
 /*-------------- offer -----------------*/
 .offer{
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-	box-shadow: 0px 12px 24px rgba(212, 212, 212, 0.25);
+	width: 100%;
+	background: #fff;
+	box-shadow: 0 24px 48px hsla(0,0%,64.7%,.25);
 	border-radius: 12px;
-	padding: 32px 28px;
-	margin: 16px 0;
+	margin: 0 10px 16px;
 
 	&__head{
 		@include font(normal, 500, 1.25rem, 1.2, #fff);
@@ -15,5 +13,10 @@
 
 	&__text{
 		@include font(normal, normal, 1rem, 1.2, #fff);
+	}
+
+	img {
+		width: 100%;
+		border-radius: 12px;
 	}
 }
