--- a/src/assets/scss/components/pay-choose-form.scss
+++ b/src/assets/scss/components/pay-choose-form.scss
@@ -143,7 +143,7 @@
 	}
 
 	&__text{
-		@include font(normal, normal, 0.75rem, 1.2, #a4a4a4);
+		@include font(normal, normal, 0.75rem, 1.2, #4a4a4a);
 		margin-top: 6px;
 	}
 
