--- a/src/assets/scss/components/product.scss
+++ b/src/assets/scss/components/product.scss
@@ -1,22 +1,35 @@
 /*-------------- product -----------------*/
+.popup-wrap-product{
+	padding: 0;
+	top: auto;
+	transform: initial;
+	overflow-x: hidden;
+	height: 100%;
+
+	.popup{
+		height: 100%;
+	}
+}
+
 .product{
+	display: flex;
+	flex-direction: column;
+	height: 100%;
 	position: relative;
-	padding-bottom: 40px;
 
 	&__close{
 		position: absolute;
-		top: 27px;
-		right: -12px;
+		top: 30px;
+		right: 30px;
 		.icon{fill: #fff;}
 	}
 
 	&__img{
 		display: block;
-		height: 200px;
+		height: 370px;
 		background-repeat: no-repeat;
 		background-position: center;
 		background-size: cover;
-		margin: -50px -32px 20px;
 	}
 
 	&__main{
@@ -30,11 +43,18 @@
 	}
 
 	&__head{
+		display: flex;
+		align-items: center;
 		@include font(normal, 500, 2rem, 1.2, $color-text);
+
+		.catalog-list-icon__item{
+			margin-right: 0;
+			margin-left: 12px;
+		}
 	}
 
 	&__desc{
-		@include font(normal, normal, 1rem, 1.2, $color-grey);
+		@include font(normal, normal, 1rem, 1.2, #4a4a4a);
 		margin-top: 15px;
 	}
 
@@ -53,6 +73,18 @@
 		white-space: nowrap;
 		margin-top: 7px;
 	}
+
+	&__content {
+		padding: 30px 50px 0;
+		flex: 1 1 auto;
+	}
+}
+
+.product-header {
+	position: sticky;
+	top: 0;
+	z-index: 1;
+	box-shadow: 0 20px 25px hsl(0, 0%, 100%);
 }
 
 .product-form-bottom{
@@ -60,6 +92,10 @@
 	justify-content: space-between;
 	align-items: center;
 	margin-top: 23px;
+	padding: 30px 50px;
+	position: sticky;
+	bottom: 0;
+	background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 30%, #ffffff00 5%, #b0b0b0 150%);
 
 	.btn{
 		min-width: 172px;
@@ -85,7 +121,8 @@
 }
 
 .product-choose{
-	width: calc(33.33% - 16px);
+	// width: calc(33.33% - 16px);
+	width: auto;
 	margin: 0 8px 12px;
 
 	&__label{
@@ -103,7 +140,8 @@
 		transition: all 0.3s ease 0s;
 	}
 
-	input[type=radio] {
+	input[type=radio],
+	input[type=checkbox]{
 		display: none;
 	}
 
@@ -132,6 +170,12 @@
 		width: calc(100% - 32px);
 	}
 
+	&__text,
+	&__title {
+		width: max-content;
+		padding-right: 20px;
+	}
+
 	&__title{
 		@include font(normal, normal, 1rem, 1.2, #4a4a4a);
 	}
@@ -148,7 +192,7 @@
 		position: absolute;
 		top: 8px;
 		right: 8px;
-		opacity: 0;
+		// opacity: 0;
 		transition: all 0.3s ease 0s;
 
 		.icon{
@@ -158,10 +202,22 @@
 		}
 	}
 
-	input[type=radio]:checked + &__label{background: #fbe7ee;}
-	input[type=radio]:checked + &__label &__mark{border-color: $color-red;}
-	input[type=radio]:checked + &__label &__mark .icon{opacity: 1;}
-	input[type=radio]:checked + &__label &__star{opacity: 1;}
+	input[type=radio]:checked + &__label,
+	input[type=checkbox]:checked + &__label{
+		background: #fbe7ee;
+	}
+
+	input[type=radio]:checked + &__label &__mark,
+	input[type=checkbox]:checked + &__label &__mark{
+		border-color: $color-red;
+	}
+
+	input[type=radio]:checked + &__label &__mark .icon,
+	input[type=checkbox]:checked + &__label &__mark .icon,
+	input[type=radio]:checked + &__label &__star {
+		opacity: 1;
+	}
+	// input[type=radio]:checked + &__label &__star{opacity: 1;}
 	input[type=radio]:checked + &__label &__title{color: $color-red;}
 }
 
@@ -220,7 +276,7 @@
 	border: 1px solid rgba(221,221,221,0.5);
 	border-radius: 1rem;
 	margin: 0 8px 17px;
-	padding: 0 5px 0 15px;
+	padding: 0 5px 0 10px;
 
 	&__text{
 		@include font(normal, normal, 1rem, 2rem, #4a4a4a);
@@ -301,7 +357,14 @@ html[dir="rtl"]{
 
 		&__close{
 			right: auto;
-			left: 27px;
+			left: 30px;
+		}
+
+		&__head{
+			.catalog-list-icon__item{
+				margin-right: 12px;
+				margin-left: 0;
+			}
 		}
 	}
 
@@ -312,6 +375,11 @@ html[dir="rtl"]{
 		}
 	}
 
+  @media (min-width: 767px) {
+    .product-form-count {
+      padding: 0 10px 0 5px;
+    }
+  }
 	.product-form-count{
 		&__text{
 			padding-right: 0;
@@ -331,20 +399,26 @@ html[dir="rtl"]{
 			right: auto;
 			left: 8px;
 		}
+
+		&__text,
+		&__title {
+			padding-right: 0;
+			padding-left: 20px;
+		}
 	}
 }
 
 @media (max-width: 767px) {
 	.product{
-		padding: 0 20px 150px;
+		padding: 0;
 		position: relative;
 
-		&__content{padding: 0;}
+		&__content{padding: 25px 25px 160px;}
 		&__main{margin-bottom: 20px;}
 
 		&__img{
-			height: 174px;
-			margin: 0 -20px 20px;
+			height: 211px;
+			margin: 0;
 		}
 		&__head{
 			font-size: 1.125rem;
@@ -367,6 +441,18 @@ html[dir="rtl"]{
 			font-weight: normal;
 			margin-top: 2px;
 		}
+
+		&__close {
+			width: 20px;
+			height: 20px;
+		}
+
+		.catalog-list-icon{
+			&__item{
+				width: 24px;
+				height: 24px;
+			}
+		}
 	}
 
 	.product-form{
@@ -377,15 +463,12 @@ html[dir="rtl"]{
 	.product-choose-wrap{margin: 0 -5px;}
 
 	.product-choose{
-		width: calc(33.33% - 10px);
+		// width: calc(33.33% - 10px);
 		margin: 0 5px 12px;
 
 		&__title{font-size: 0.875rem;}
 		&__text{font-size: 0.75rem;}
-		&__label{
-			align-items: flex-start;
-			padding: 8px;
-		}
+		&__label{padding: 14px 16px 11px;}
 
 		&__info{width: calc(100% - 22px);}
 
@@ -429,17 +512,24 @@ html[dir="rtl"]{
 	.product-form-count-wrap{margin: 0 -5px -12px;}
 
 	.product-form-count{
+		display: flex;
+		flex-direction: column;
+		height: auto;
 		min-width: auto;
 		width: calc(50% - 10px);
+		padding: 10px;
 		margin: 0 5px 12px;
 
-		&__text{font-size: 0.875rem;}
+		&__text{
+			font-size: 0.875rem;
+			padding: 0;
+		}
 	}
 
 	.product-form-bottom{
 		width: 100%;
-		padding: 60px 20px 20px;
-		background: linear-gradient(180deg, rgba(255, 255, 255, 0) -14.18%, #FFFFFF 82.47%);
+		padding: 25px;
+		// background: linear-gradient(180deg, rgba(255, 255, 255, 0) -14.18%, #FFFFFF 82.47%);
 		position: fixed;
 		bottom: 0;
 		left: 0;
