--- a/src/assets/scss/components/profile.scss
+++ b/src/assets/scss/components/profile.scss
@@ -149,7 +149,7 @@ html[dir="rtl"]{
 			justify-content: space-between;
 			align-items: center;
 			margin: 0 -20px 0;
-			padding: 0 20px 20px;
+			padding: 20px;
 			background: #f3f5f8;
 		}
 
@@ -195,7 +195,7 @@ html[dir="rtl"]{
 			width: 100%;
 			padding: 60px 20px 20px;
 			background: linear-gradient(180deg, rgba(255, 255, 255, 0) -14.18%, #FFFFFF 82.47%);
-			position: fixed;
+			position: sticky;
 			bottom: 0;
 			left: 0;
 			z-index: 1000;
