--- a/src/assets/scss/components/search-form-order.scss
+++ b/src/assets/scss/components/search-form-order.scss
@@ -1,4 +1,11 @@
 /*-------------- search-form -----------------*/
+.search-form-order-wrap{
+	&__popup .close-button {
+		position: absolute;
+		bottom: -25px;
+	}
+}
+
 .search-form-order{
 	width: 250px;
 	position: relative;
@@ -56,6 +63,7 @@ html[dir="rtl"]{
 
 @media (max-width: 767px) {
 	.search-form-order-wrap{
+
 		&__btn{
 			display: inline-flex;
 			align-items: center;
@@ -64,8 +72,8 @@ html[dir="rtl"]{
 			width: 40px;
 			height: 40px;
 			border-radius: 50%;
-			background: $color-orange;
-			box-shadow: 0px 12px 20px rgba(171, 171, 171, 0.25);
+			background: $color-red;
+			box-shadow: 0 12px 20px rgba(171, 171, 171, 0.25);
 			position: relative;
 
 			.icon{
@@ -110,8 +118,13 @@ html[dir="rtl"]{
 		align-items: center;
 		width: 100%;
 
+		input:focus {
+			border-bottom: 1px solid #f18f16;
+			transition: all 0.5s linear;
+		}
+
 		input[type="text"]{
-			width: calc(100% - 45px);
+			width: 100%;
 			padding: 17px 0 15px;
 			border-bottom: 1px solid #e9e9e9;
 		}
@@ -119,6 +132,8 @@ html[dir="rtl"]{
 		&__close{
 			display: inline-block;
 			vertical-align: top;
+			position: absolute;
+			right: 0;
 
 			.icon{fill: #000}
 		}
@@ -133,6 +148,11 @@ html[dir="rtl"]{
 		.search-form-order{
 			input[type="text"]{
 				padding: 17px 0 15px;
+			}
+
+			&__close{
+				right: auto;
+				left: 0;
 			}
 		}
 	}
