--- a/src/assets/scss/components/sidebar-order.scss
+++ b/src/assets/scss/components/sidebar-order.scss
@@ -1,8 +1,9 @@
 /*-------------- sidebar-order -----------------*/
 .sidebar-order-wrap{
 	width: calc(26% + 50px);
-	height: calc(100vh - 44px);
+	height: calc(100vh - 140px);
 	padding-left: 50px;
+	z-index: 1;
 }
 
 .sidebar-order{
@@ -17,7 +18,7 @@
 		overflow-y: auto;
 	}
 
-	.cat-history{height: calc(100vh - 263px);}
+	.cat-history{height: calc(100vh - 360px);}
 	.cat-order-empty{max-height: calc(100vh - 537px);}
 }
 
@@ -46,7 +47,7 @@ html[dir="rtl"]{
 		flex-direction: column;
 		justify-content: space-between;
 		width: 80%;
-		height: 100vh;
+		height: 100%;
 		overflow-y: auto;
 		overflow-x: hidden;
 		border-radius: 0 20px 20px 0;
@@ -72,12 +73,15 @@ html[dir="rtl"]{
 		&__bottom .btn img{
 			width: 20px;
 		}
-
 		&__time{
 			padding-bottom: 20px;
 			margin-bottom: 20px;
 			border-bottom: 1px solid #e9e9e9;
 		}
+    &__phone{
+      direction: ltr;
+      display: inherit;
+    }
 	}
 
 	.mob-sidebar-delivery{
@@ -123,6 +127,12 @@ html[dir="rtl"]{
 		}
 	}
 
+	.close_sidebar {
+		position: absolute;
+		right: 20px;
+		top: 20px;
+	}
+
 	html[dir="rtl"]{
 		.mob-sidebar{
 			left: auto;
@@ -142,5 +152,10 @@ html[dir="rtl"]{
 				margin-left: 14px;
 			}
 		}
+
+		.close_sidebar {
+			right: auto;
+			left: 20px;
+		  }
 	}
 }
