--- a/src/assets/scss/components/sms-form.scss
+++ b/src/assets/scss/components/sms-form.scss
@@ -1,7 +1,7 @@
 /*-------------- sms-form -----------------*/
 .sms-form{
 	&__text{
-		@include font(normal, normal, 1rem, 1.2, $color-text);
+		@include font(normal, normal, 1rem, 1.3, $color-text);
 		text-align: center;
 		margin-bottom: 30px;
 	}
@@ -11,7 +11,8 @@
 		justify-content: center;
 	}
 
-	input[type="text"]{
+	input[type="text"],
+	input[type=tel]{
 		height: 4.7rem;
 		width: 53px;
 		outline: none;
@@ -27,16 +28,15 @@
 		transition: all 0.3s ease 0s;
 	}
 
-	input[type="text"]:focus{
+	input[type="text"]:focus,
+	input[type=tel]:focus{
 		box-shadow: none;
-	}
-
-	input[type="text"]::placeholder{
-		color: #9B9B9B;
-	}
-
-	input[type="text"]:focus{
 		border-color: $color-orange;
+	}
+
+	input[type="text"]::placeholder,
+	input[type=tel]::placeholder{
+		color: #9B9B9B;
 	}
 
 	&__content{
@@ -70,6 +70,10 @@
 	}
 }
 
+.business_logo {
+	max-height: 200px;
+}
+
 html[dir="rtl"]{
 	.sms-form{
 		&__copyright{
@@ -81,7 +85,13 @@ html[dir="rtl"]{
 	}
 }
 
-
+@media (min-width: 768px) {
+	.business_logo{
+		z-index: 9999;
+		position: fixed;
+		margin-top: 1rem;
+	  }
+}
 
 @media (max-width: 767px) {
 	.sms-form{
@@ -91,6 +101,11 @@ html[dir="rtl"]{
 			justify-content: center;
 			height: calc(100% - 140px);
 			width: 100%;
+		}
+
+		&__btn-label,
+		&__text {
+			color: #fff;
 		}
 	}
 }
