--- a/src/assets/scss/layouts/header.scss
+++ b/src/assets/scss/layouts/header.scss
@@ -5,10 +5,11 @@
 		justify-content: space-between;
 		align-items: center;
 		background: #f0f0f0;
-		padding: 14px 22px;
+		padding: 10px 15px;
 
 		&__logo img{
-			width: 72px;
+			width: 100px; 
+			max-height: 30px;
 		}
 
 		&__link{
