--- a/src/assets/scss/layouts/main.scss
+++ b/src/assets/scss/layouts/main.scss
@@ -6,9 +6,10 @@ body{
 	box-sizing:border-box;
 }
 
-// html{
-// 	direction: ltr!important;
-// }
+input, textarea, button.btn, input[type=submit].btn {
+  font-family: $font-site!important;
+}
+
 
 *,
 *:before,
@@ -40,6 +41,10 @@ a:hover{
 p{
 	@include font(normal, normal, 0.85rem, 1.2, $color-grey);
 	margin-bottom: 10px;
+}
+
+h1,h2,h3,h4,p,span,div {
+	user-select: none;
 }
 
 h1,
@@ -85,6 +90,8 @@ h6,
 	width: 100%;
 	max-width: 1920px;
 	margin: 0 auto;
+	background-size: cover;
+	transition: all 0.2s;
 
 	&.blur{
 		height: 100vh;
@@ -104,18 +111,12 @@ main{
 	margin-right: auto;
 }
 
-input[type="submit"].btn,
-button.btn{
-	font-family: $font-site;
-}
-
 .btn,
 input[type="submit"].btn,
 button.btn{
 	display: inline-block;
 	height: 3rem;
 	min-width: 200px;
-	@include gradient-orange;
 	border: 0;
 	border-radius: 1.5rem;
 	@include font(normal, 500, 1rem, 3rem, #fff);
@@ -125,13 +126,13 @@ button.btn{
 	cursor: pointer;
 	text-decoration: none;
 	transition: all 0.3s ease 0s;
-	box-shadow: 0px 8px 16px rgba(138, 138, 138, 0.25);
+	box-shadow: 0 8px 16px rgba(138, 138, 138, 0.25);
 }
 
 .btn:hover,
 input[type="submit"].btn:hover,
 button.btn:hover{
-	@include gradient-orange-dark;
+  box-shadow: 0 8px 16px rgba(138, 138, 138, 0.5);
 }
 
 .btn img,
@@ -297,13 +298,66 @@ button[disabled].btn_border-grad .icon{fill: $color-grey;}
 .d-none{display: none !important;}
 
 .backdrop{
-	background: rgba(0, 0, 0, 0.6);
+	display: flex;
+	justify-content: center;
+	background-color: rgba(0, 0, 0, 0.6);
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: 50%;
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	z-index: 1005;
+}
+
+.loading {
+	width: 100vw;
+	height: 100vh;
+	opacity: 0.6;
+	background: black;
+	position: absolute;
+	display: flex;
+	place-content: center;
+	place-items: center;
+	z-index: 2000;
+
+	img {
+		max-width: 200px;
+	}
+}
+
+.hide {
+	z-index: 0;
+	display: none;
+}
+
+.pointer {
+	cursor: pointer;
+}
+
+.lazy-image {
+	transition: opacity 1s;
+	opacity: 0;
+}
+
+.lazy-image.ng-lazyloaded {
+	opacity: 1;
+}
+
+.geteat-copy {
+	font-family: Product Sans, sans-serif !important;
+	direction: ltr;
+}
+
+.greyscale img {
+	filter: grayscale(100%);
+	opacity: 0.5;
+}
+
+.mb-10 {
+	margin-bottom: 10px;
 }
 
 html[dir="rtl"]{
@@ -330,6 +384,24 @@ html[dir="rtl"]{
 	.d-md-flex{display: flex !important;}
 	.d-md-inline-flex{display: flex !important;}
 	.d-md-none{display: none !important;}
+
+	.geteat-copy {
+		position: fixed;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+		background: white;
+		padding: 5px;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		z-index: 9999;
+		img {
+		margin-left: 2px!important;
+		margin-right: 2px!important;
+		}
+	}
 }
 
 @media (max-width: 767px) {
@@ -344,4 +416,38 @@ html[dir="rtl"]{
 		width: 100%;
 		margin: 0;
 	}
+
+	.top-area-mobile {
+		position: fixed;
+		top: 0;
+		width: 100%;
+		z-index: 1;
+	}
+
+  .geteat-copy {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background: white;
+    padding: 5px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+    img {
+      margin-left: 2px!important;
+      margin-right: 2px!important;
+    }
+  }
+}
+
+// @import '~perfect-scrollbar/css/perfect-scrollbar.css';
+// ::-webkit-scrollbar {
+//   display: none;
+// }
+
+.danger-text {
+  font-weight: bold;
 }
