pizza food menu

--- a/src/pug/components/catalog-menu.pug
+++ b/src/pug/components/catalog-menu.pug
@@ -1,4 +1,4 @@
-.catalog-menu
+.catalog-menu.brand-r-cards
 	.catalog-menu__content
 		-
 			var list=[
@@ -15,6 +15,16 @@
 				{text:'Main dishes'},
 				{text:'Wok-noodles'},
 				{text:'Extra dishes'},
+				{text:'Soups'},
+				{text:'Main dishes'},
+				{text:'Wok-noodles'},
+				{text:'Sweets'},
+				{text:'Children dishes'},
+				{text:'Side dishes'},
+				{text:'Japan’s Specials'},
+				{text:'Rolls'},
+				{text:'Main dishes'},
+				{text:'Wok-noodles'},
 			];
 
 		each item in list
