--- a/src/pug/pages/add-adress.pug
+++ b/src/pug/pages/add-adress.pug
@@ -95,9 +95,9 @@ block content
 											.catalog-list
 												-
 													var list=[
-														{img:'steak-big.jpg', new:'true', name:'Steak with vegetables', cur_price:'$ 5,99', old_price:'$ 7,99', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_gluten:'true'},
-														{img:'vegan-big.jpg', name:'Vegan joy', cur_price:'$ 7,59', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_broccoli:'true', ic_avocado:'true'},
-														{img:'soup-big.jpg', name:'Red soup', cur_price:'$ 5,99', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_gluten:'true'},
+														{img:'pizza1.png', new:'true', name:'Steak with vegetables', cur_price:'$ 5,99', old_price:'$ 7,99', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_gluten:'true'},
+														{img:'pizza2.png', name:'Vegan joy', cur_price:'$ 7,59', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_broccoli:'true', ic_avocado:'true'},
+														{img:'pizza3.png', name:'Red soup', cur_price:'$ 5,99', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_gluten:'true'},
 													];
 												each item in list
 													.catalog-list__item(class=item.status=='inactive'?'inactive':'')
@@ -141,9 +141,9 @@ block content
 
 												-
 													var list=[
-														{img:'steak-big.jpg', new:'true', name:'Steak with vegetables', cur_price:'$ 5,99', old_price:'$ 7,99', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_gluten:'true'},
-														{img:'vegan-big.jpg', name:'Vegan joy', cur_price:'$ 7,59', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_broccoli:'true', ic_avocado:'true'},
-														{img:'soup-big.jpg', name:'Red soup', cur_price:'$ 5,99', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_gluten:'true'},
+														{img:'pizza1.png.jpg', new:'true', name:'Steak with vegetables', cur_price:'$ 5,99', old_price:'$ 7,99', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_gluten:'true'},
+														{img:'pizza2.png.jpg', name:'Vegan joy', cur_price:'$ 7,59', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_broccoli:'true', ic_avocado:'true'},
+														{img:'pizza3.png.jpg', name:'Red soup', cur_price:'$ 5,99', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_gluten:'true'},
 													];
 												each item in list
 													.catalog-list__item(class=item.status=='inactive'?'inactive':'')
@@ -191,9 +191,9 @@ block content
 											.catalog-list
 												-
 													var list=[
-														{img:'steak-big.jpg', new:'true', name:'Steak with vegetables', cur_price:'$ 5,99', old_price:'$ 7,99', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_gluten:'true'},
-														{img:'vegan-big.jpg', name:'Vegan joy', cur_price:'$ 7,59', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_broccoli:'true', ic_avocado:'true'},
-														{img:'soup-big.jpg', name:'Red soup', cur_price:'$ 5,99', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_gluten:'true'},
+														{img:'pizza1.png.jpg', new:'true', name:'Steak with vegetables', cur_price:'$ 5,99', old_price:'$ 7,99', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_gluten:'true'},
+														{img:'pizza2.png.jpg', name:'Vegan joy', cur_price:'$ 7,59', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_broccoli:'true', ic_avocado:'true'},
+														{img:'pizza3.png.jpg', name:'Red soup', cur_price:'$ 5,99', text:'Lorem ipsum dolor sit amet, consectetur adipiscing elit', ic_gluten:'true'},
 													];
 												each item in list
 													.catalog-list__item(class=item.status=='inactive'?'inactive':'')
