--- a/src/pug/pages/typography.pug
+++ b/src/pug/pages/typography.pug
@@ -639,6 +639,26 @@ block content
 						+svg('ic-exit','ic-exit', '20', '20')
 					.type-icon__name ic-exit
 
+				.type-icon__item
+					.type-icon__img
+						+svg('ic-accessibility','ic-accessibility', '25', '24')
+					.type-icon__name ic-accessibility
+
+				.type-icon__item
+					.type-icon__img
+						+svg('ic-accessibility-wc','ic-accessibility-wc', '25', '24')
+					.type-icon__name ic-accessibility-wc
+
+				.type-icon__item
+					.type-icon__img
+						+svg('ic-deaf','ic-deaf', '25', '24')
+					.type-icon__name ic-deaf
+
+				.type-icon__item
+					.type-icon__img
+						+svg('ic-park','ic-park', '25', '24')
+					.type-icon__name ic-park
+
 				
 
 			//- br
