--- a/src/assets/scss/components/catalog.scss
+++ b/src/assets/scss/components/catalog.scss
@@ -276,10 +276,11 @@
 	min-height: 40px;
 	background: #e0f9dc;
 	border-radius: 12px;
-	padding: 8px 15px 3px;
+	padding: 3px 15px;
 	position: relative;
 
 	&__img{
+		min-width: 40px;
 		margin-right: 12px;
 		position: relative;
 	}
@@ -292,6 +293,7 @@
 
 	&__label{
 		@include font(normal, 500, 1rem, 1.2, $color-text);
+		white-space: nowrap;
 	}
 
 	&__bg{
@@ -310,6 +312,8 @@
 	justify-content: space-between;
 	align-items: flex-start;
 	margin-bottom: 10px;
+	margin-top: 72px;
+
 	.working-time{
 		width: calc(100% - 104px);
 	}
@@ -477,8 +481,16 @@
 	// &__item.inactive{opacity: 0.3;}
 
 	.offer{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
 		width: 100%;
+		padding: 10px 28px;
+		min-height: 120px;
 		margin: 0 10px 16px;
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: cover;
 	}
 
 	&_tile &__item{
@@ -580,6 +592,36 @@
 
 	&__item_no-bg{background: transparent;}
 	&__item_no-bg img{width: 24px;}
+}
+
+.catalog-list-size{
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	margin-left: -3px;
+	margin-right: -3px;
+
+	&__item{
+		display: inline-block;
+		vertical-align: middle;
+		// align-items: center;
+		// justify-content: center;
+		width: 24px;
+		height: 24px;
+		border-radius: 50%;
+		background: #f3f3f3;
+		margin: 3px;
+		@include font(normal, normal, 0.8751rem, 26px, #797979);
+		text-align: center;
+		transition: all 0.3s ease 0s;
+		cursor: pointer;
+	}
+
+	&__item:hover,
+	&__item.active{
+		background: $color-orange;
+		color: #fff;
+	}
 }
 
 
@@ -901,7 +943,7 @@ html[dir="rtl"]{
 	&__link:hover .icon{fill: $color-red;}
 
 	&__bottom{
-		margin-top: 36px;
+		margin-top: 28px;
 		text-align: center;
 		padding-bottom: 20px;
 	}
