--- a/src/assets/scss/components/countdown.scss
+++ b/src/assets/scss/components/countdown.scss
@@ -1,9 +1,8 @@
 /*-------------- countdown-----------------*/
 .countdown{
-	display: flex;
+	display: inline-flex;
 	align-items: center;
-  width: 100%;
-  justify-content: space-between;
+	position: relative;
 
 	&__label{
 		@include font(normal, 500, 0.875rem, 1.2, #777);
